Added more pics

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <body>
         <header class="container">
-            <img src="Assets/images/M3_logo.png" alt="M3 logo">
-            <h1>Medieval Memory Match</h1>
+            <img src="Assets/images/disPrin.png" alt="M3 logo">
+            <h1>Disney Memory Match</h1>
             <button class="btn" id="start" onclick="gameState('gameStart')">Start Game</button>
             <button class="btn" id="reset" onclick="resetGame()">Reset Game</button>
         </header>
